Create function computerPlay() This function selects randomly the value the computre will "play" with

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <script>
 
+function computerPlay() {
+    let Computervalues = ["Rock","Paper","Scissors"],
+        valueToUse = Computervalues[Math.floor(Math.random() * Computervalues.length)];
+    alert(valueToUse); //Alerts the computer value (placeholder since doesn't need to do that in real action)
+}
+
 </script>
 
 </body>
