Added prompt for user to input their value

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
 <script>
 
+let humanPlay = prompt ("Choose: Rock, Paper or Scissors", "Write your selection");
+
 function computerPlay() {
     let Computervalues = ["Rock","Paper","Scissors"],
         valueToUse = Computervalues[Math.floor(Math.random() * Computervalues.length)];
     alert(valueToUse); //Alerts the computer value (placeholder since doesn't need to do that in real action)
 }
+
 
 </script>
 
