--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <script>
 
-let humanPlay = prompt ("Choose: Rock, Paper or Scissors", "Write your selection");
+let humanPlay = prompt ("Choose: Rock, Paper or Scissors", "Write your selection"); //Prompt that asks user to write selection.
 
 function computerPlay() {
     let Computervalues = ["Rock","Paper","Scissors"],
