Move player selection inside playRound() Now row let playerSelection = playerPlay(); will be executed only when calling playRound. Also not a constant but will be triggered every round with a new value

--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@ function playerPlay() {
  const ask = prompt("Rock, Paper, or Scissors?").toUpperCase();
  return ask; }
 
- const playerSelection = playerPlay();
+ 
 
 
 // Play one round
 
- function playRound() {                  
+ function playRound() {        
+  
+    let playerSelection = playerPlay();
+  
     let playerChoice = playerSelection;
     let computerSelection = computerPlay(); // Runs computerPlay and sets it as
 
