Refined pseudocode for game()
Wrote new pseudocode for game(). Now algorithm should be complete
and can begin writing code.

--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@ function game() {
 }
 
 /*Game in pseudocode
-Set variables for playerScore and computerScore, both with default value of 0.
-Create variable for game end result that triggers playRound() function and extracts from it .
-
+Alert - this is a five round game, get ready
+Run playRound().
+After succesfull run check score for both players, IF below 5 alert "ready for next round?" and after OK, replay playRound().
+IF score for either is 5, alert with winner and OK resets score.
 */
 
 /* Score tracking in pseudocode
