Added button to html side to start the game
Button + h1 element and a short paragraph

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-
+<h1>Play Rock Paper Scissors against computer</h1>
+  <button onclick="game()">Play</button>
+<p>The first to get 5 points wins.</p>
 
 <script>
 // Set initial score when loading the program
