--- a/index.html
+++ b/index.html
@@ -4,16 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
+    <title> R / P / S </title>
 </head>
 
 <body>
-  
-<h1>Play Rock Paper Scissors against computer</h1>
-  <button onclick="game()">Play</button>
-<p>The first to get 5 points wins.</p>
+
+<div class="header">
+  <h1>rock / paper / scissors</h1>
+  <p>first to get 5 points wins</p>
+</div>
+
+<div class="player">
+  <h2>C H O O S E</h2>
+  <button class="gameButton" onclick="">r o c k</button>
+  <button class="gameButton" onclick="">p a p e r</button>
+  <button class="gameButton" onclick="">s c i s s o r s</button>
+</div>
+
+<div class="scorecard">
+<h2>S C O R E</h2>
+</div>
+
+<!-- <button onclick="game()">Play</button> -->
+ 
+
 
 <script>
+
+/*
+
+The UI - three buttons that listen to start game function. Score counter.
+Event listener for wictory, which notifyies about win somehow.
+Score counter for both players and reset, for reseting both.
+
+*/
+
 // Set initial score when loading the program
 let playerScore = 0;
 let computerScore = 0;
