--- a/index.html
+++ b/index.html
@@ -20,10 +20,27 @@
   <button class="gameButton" onclick="playerRock()">r o c k</button>
   <button class="gameButton" onclick="playerPaper()">p a p e r</button>
   <button class="gameButton" onclick="playerScissors()">s c i s s o r s</button>
+  
 </div>
 
+<div class="round-winner">
+  <p>this round was won by <span id="roundWinner"></span></p>
+</div>
+
+<div class="reset">
+  <div>your play was <span id="playerChoice"></span> </div>
+  <div>AI play was <span id="computerSelection"></span></div>
+</div>
+
+
+
 <div class="scorecard">
-<h2>S C O R E</h2>
+  <div class="score-row">
+    
+  <div>player score: <span id="playerScore"></span></div>
+  <div>A I score: <span id="computerScore"></span></div>
+  </div>
+  <button class="gameButton" onclick="resetScore()">r e s e t&nbsp;&nbsp; &nbsp;&nbsp;g a m e</button>
 </div>
 
 <!-- <button onclick="game()">Play</button> -->
