Updating functions + graphics

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 
 <div class="scores">
   <div>
-  <div>your play was<span id="playerChoice"></span> </div>
+  <div>you chose<span id="playerChoice"></span> </div>
   <div>player score: <span id="playerScore"></span></div>
 </div>
-<p>this round was won by: <span id="roundWinner"></span></p>
+<div class="center-winner">
+<div>this round was won by:<span id="roundWinner"></span></div>
+</div>
 <div>
-  <div>ai play was<span id="computerSelection"></span></div>
+  <div>ai picked<span id="computerSelection"></span></div>
   <div>ai score: <span id="computerScore"></span></div>
 </div>
 </div>
