Removed defer from js path

--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
   Copyright © The Odin Project - <script> document.write(new Date().getFullYear()) </script> Antero Tienaho
 </div>
 
-<script src="scripts.js defer"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
